Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-5390

Crash in preference handling

    XMLWordPrintable

Details

    • 1dfd78a9c8961604ec9550b605f63c272624c822

    Description

      I am seeing a crash in the preference handling.

      Steps to reproduce:
      1. Open any project (e.g. Qt Creator) in Qt Creator.
      2. Open a source file belonging to that project.
      3. Close the project, keep the file open.
      4. Click into the editor with the file and hit the return key.

      Actual result:
      Qt Creator crashes

      Expected result:
      Qt Creator does not crash.

      Here is the backtrace:

      Program received signal SIGSEGV, Segmentation fault.
      0x00007fffef770242 in TextEditor::IFallbackPreferences::currentFallback (this=
      0x47004f004c0000)
      at /home/code/src/creator-2.3/src/plugins/texteditor/ifallbackpreferences.cpp:152
      152 return d->m_currentFallback;
      (gdb) bt
      #0 0x00007fffef770242 in TextEditor::IFallbackPreferences::currentFallback (
      this=0x47004f004c0000)
      at /home/code/src/creator-2.3/src/plugins/texteditor/ifallbackpreferences.cpp:152
      #1 0x00007fffef7701f2 in TextEditor::IFallbackPreferences::currentPreferences (
      this=0x1531ab0)
      at /home/code/src/creator-2.3/src/plugins/texteditor/ifallbackpreferences.cpp:140
      #2 0x00007fffef77019f in TextEditor::IFallbackPreferences::currentValue (this=0x1531ab0)
      at /home/code/src/creator-2.3/src/plugins/texteditor/ifallbackpreferences.cpp:134
      #3 0x00007fffee2475e6 in CppTools::CppCodeStylePreferences::currentSettings (this=
      0x1531ab0)
      at /home/code/src/creator-2.3/src/plugins/cpptools/cppcodestylepreferences.cpp:86
      #4 0x00007fffee1f9415 in CppTools::CppQtStyleIndenter::codeStyleSettings (
      this=0x4d9e0b0)
      at /home/code/src/creator-2.3/src/plugins/cpptools/cppqtstyleindenter.cpp:163
      #5 0x00007fffee1f8e91 in CppTools::CppQtStyleIndenter::indentBlock (this=0x4d9e0b0,
      doc=0x4daf530, block=..., typedChar=..., editor=0x4d34980)
      at /home/code/src/creator-2.3/src/plugins/cpptools/cppqtstyleindenter.cpp:99
      #6 0x00007fffee1f9379 in CppTools::CppQtStyleIndenter::indent (this=0x4d9e0b0,
      doc=0x4daf530, cursor=..., typedChar=..., editor=0x4d34980)
      at /home/code/src/creator-2.3/src/plugins/cpptools/cppqtstyleindenter.cpp:148
      #7 0x00007fffef6b7902 in TextEditor::BaseTextEditorWidget::indent (this=0x4d34980,
      doc=0x4daf530, cursor=..., typedChar=...)
      at /home/code/src/creator-2.3/src/plugins/texteditor/basetexteditor.cpp:4568
      #8 0x00007fffef6a4a13 in TextEditor::BaseTextEditorWidget::keyPressEvent (
      this=0x4d34980, e=0x7fffffffcd70)
      at /home/code/src/creator-2.3/src/plugins/texteditor/basetexteditor.cpp:1579
      #9 0x00007fffec486f03 in CppEditor::Internal::CPPEditorWidget::keyPressEvent (this=
      0x4d34980, e=0x7fffffffcd70)
      at /home/code/src/creator-2.3/src/plugins/cppeditor/cppeditor.cpp:1687
      #10 0x00007ffff6cd2ca2 in QWidget::event(QEvent*) ()
      from /home/code/build/qt/lib/libQtGui.so.4
      #11 0x00007ffff7081be6 in QFrame::event(QEvent*) ()
      from /home/code/build/qt/lib/libQtGui.so.4
      #12 0x00007ffff70fd28b in QAbstractScrollArea::event(QEvent*) ()
      from /home/code/build/qt/lib/libQtGui.so.4
      #13 0x00007ffff7119765 in QPlainTextEdit::event(QEvent*) ()
      from /home/code/build/qt/lib/libQtGui.so.4
      #14 0x00007fffef6a73e2 in TextEditor::BaseTextEditorWidget::event (this=0x4d34980,
      e=0x7fffffffcd70)
      at /home/code/src/creator-2.3/src/plugins/texteditor/basetexteditor.cpp:2037
      #15 0x00007fffec48670b in CppEditor::Internal::CPPEditorWidget::event (this=0x4d34980,
      e=0x7fffffffcd70)
      at /home/code/src/creator-2.3/src/plugins/cppeditor/cppeditor.cpp:1621
      #16 0x00007ffff6c85334 in QApplicationPrivate::notify_helper(QObject*, QEvent*) ()
      from /home/code/build/qt/lib/libQtGui.so.4
      #17 0x00007ffff6c89e36 in QApplication::notify(QObject*, QEvent*) ()
      from /home/code/build/qt/lib/libQtGui.so.4
      #18 0x00007ffff63f8d3c in QCoreApplication::notifyInternal(QObject*, QEvent*) ()
      from /home/code/build/qt/lib/libQtCore.so.4
      #19 0x00007ffff6d1d1c9 in QKeyMapper::sendKeyEvent(QWidget*, bool, QEvent::Type, int, QFlags<Qt::KeyboardModifier>, QString const&, bool, int, unsigned int, unsigned int, unsigned int, bool*) () from /home/code/build/qt/lib/libQtGui.so.4
      #20 0x00007ffff6d1d5f8 in QKeyMapperPrivate::translateKeyEvent(QWidget*, _XEvent const*, bool) () from /home/code/build/qt/lib/libQtGui.so.4
      #21 0x00007ffff6cfbafe in QApplication::x11ProcessEvent(_XEvent*) ()
      from /home/code/build/qt/lib/libQtGui.so.4
      #22 0x00007ffff6d212d4 in QEventDispatcherX11::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/code/build/qt/lib/libQtGui.so.4
      #23 0x00007ffff63f7e92 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/code/build/qt/lib/libQtCore.so.4
      #24 0x00007ffff63f8137 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) ()
      from /home/code/build/qt/lib/libQtCore.so.4
      #25 0x00007ffff63fc9db in QCoreApplication::exec() ()
      from /home/code/build/qt/lib/libQtCore.so.4
      #26 0x000000000040a8de in main (argc=1, argv=0x7fffffffe2b8)
      at ../../../../src/creator-2.3/src/app/main.cpp:386

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ckamm Christian Kamm
            hunger Tobias Hunger
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes