src/plugins/texteditor/indenter.cpp
@@ -33,6 +33,7 @@
 #include "indenter.h"
 #include "basetexteditor.h"
 #include "tabsettings.h"
+#include "ifallbackpreferences.h"
 
 using namespace TextEditor;
 
